# chip8-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_beep.py  main.cpp
src/: main.cpp
